--- a/css/style.css
+++ b/css/style.css
@@ -362,20 +362,24 @@ margin-top: 9px;
   background-color: var(--accent-color);
 }
 
-.portfolio-content{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+.portfolio-content {
+  margin: 0 auto;
+  width: 1200px;
 }
 .portfolio-project{
+  display: inline-block;
+  margin-right: 30px;
+  margin-top: 30px;
+
   border: 1px solid #EEEEEE;
   width: 370px;
 
 }
-
-.portfolio-project:not(:nth-child(-n+3)){
-  margin-top: 30px;
-
+.portfolio-project:nth-child(3n){
+  margin-right: 0;
+}
+.portfolio-project:nth-child(-n+3){
+  margin-top: 0;
 }
 .portfolio-item {
   
